--- a/UJCR/main_app/templates/main_app/base.html
+++ b/UJCR/main_app/templates/main_app/base.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-{% load i18n static %}
+{% load i18n static%}
 <html lang="ru-RU" xml:lang="ru-RU">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>{{ object.title }}</title>
-    <link rel="icon" href="127.0.0.1:8000/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/static/css/css_1.css" type="text/css"/>
-    <link rel="stylesheet" href="/static/css/css.css" type="text/css"/>
-    <link rel="stylesheet" href="/static/css/font-awesome.css" type="text/css"/>
+    <meta name="google-site-verification" content="w8xbc_-Wpfon-XI6jWkxdUfhjOJdRUTv_HK_-qzG1PE" />
+    <meta name="google-site-verification" content="LzA9iYax7uWMVRr_rD85OIe4DwopeFP3thazHEYd828" />
+    <meta name="yandex-verification" content="8ee8ba49fcf874a9" />
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    {% include "blocks/links.html" %}
 </head>
 <body class="pkp_page_index pkp_op_index has_site_logo" dir="ltr">
 
