--- a/UJCR/main_app/templates/main_app/login.html
+++ b/UJCR/main_app/templates/main_app/login.html
@@ -4,11 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UJCR | Вход</title>
-    <meta name="generator" content="Open Journal Systems 3.1.2.4"/>
-    <link rel="stylesheet" href="/static/css/css_1.css" type="text/css"/>
-    <link rel="stylesheet" href="/static/css/css.css" type="text/css"/>
-    <link rel="stylesheet" href="/static/css/font-awesome.css" type="text/css"/>
+    <title>{% trans "UJCR|Вход" %}</title>
+    {% include "blocks/links.html" %}
 </head>
 <body class="pkp_page_login pkp_op_index has_site_logo" dir="ltr">
 
