--- a/UJCR/main_app/templates/main_app/authors.html
+++ b/UJCR/main_app/templates/main_app/authors.html
@@ -1,4 +1,8 @@
 {% extends "main_app/base.html" %}
+{% load i18n %}
+{% block title %}
+    {% trans "Авторы" %}
+{% endblock %}
 {% block content %}
     <div style="padding-left: 20px">
     {% for i in authors_list %}
