--- a/UJCR/main_app/templates/main_app/editorial_member_page.html
+++ b/UJCR/main_app/templates/main_app/editorial_member_page.html
@@ -1,4 +1,5 @@
 {% extends "main_app/base.html" %}
+{% block title %}{{ object.full_name }}{% endblock %}
 {% block content %}
     <div>
         <strong style="font-size: large">{{ object.full_name }}
