--- a/UJCR/main_app/templates/main_app/registration.html
+++ b/UJCR/main_app/templates/main_app/registration.html
@@ -1,14 +1,11 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="ru-RU" xml:lang="ru-RU">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Регистрация | UJCR</title>
-
-    <meta name="generator" content="Open Journal Systems 3.1.2.4"/>
-    <link rel="stylesheet" href="/static/css/css_1.css" type="text/css"/>
-    <link rel="stylesheet" href="/static/css/css.css" type="text/css"/>
-    <link rel="stylesheet" href="/static/css/font-awesome.css" type="text/css"/>
+    <title>{% trans "Регистрация|UJCR" %}</title>
+    {% include "blocks/links.html" %}
 </head>
 <body class="pkp_page_user pkp_op_register has_site_logo" dir="ltr">
 <div class="pkp_structure_page">
