--- a/UJCR/main_app/templates/main_app/same_pages.html
+++ b/UJCR/main_app/templates/main_app/same_pages.html
@@ -1,5 +1,5 @@
 {% extends 'main_app/base.html' %}
-
+{% block title %}{{ object.title }}{% endblock %}
 {% block content %}
     {{ object.content|safe }}
 {% endblock %}
